--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,18 @@
-20/01/2023 10:24:33: 100 yens sont équivalent à 0.71 euros
+
+20/01/2023 13:52:48: 1 Euros sont équivalent à 1.08 Dollars
+20/01/2023 13:53:00: 14.55 Euros sont équivalent à 15.71 Dollars
+20/01/2023 13:53:06: 14.55 Euros sont équivalent à 15.71 Dollars
+20/01/2023 13:53:07: 14.55 Euros sont équivalent à 15.71 Dollars
+20/01/2023 13:53:09: 14.55 Dollars sont équivalent à 14.55 Dollars
+20/01/2023 13:53:16: 14.55 Dollars sont équivalent à 1899.99 Yens
+20/01/2023 13:53:22: 14.55 Dollars sont équivalent à 1899.99 Yens
+20/01/2023 13:53:26: 14.55 Dollars sont équivalent à 1899.99 Yens
+20/01/2023 13:53:30: 14.55 Dollars sont équivalent à 1899.99 Yens
+20/01/2023 13:53:34: 14.1 Dollars sont équivalent à 1841.22 Yens
+20/01/2023 13:53:38: 14.6 Dollars sont équivalent à 1906.52 Yens
+20/01/2023 13:53:41: 14.6 Euros sont équivalent à 2059.04 Yens
+20/01/2023 13:53:44: 14.6 Livre britaniques sont équivalent à 2339.82 Yens
+20/01/2023 13:53:49: 14.6 Livre britaniques sont équivalent à 17.92 Dollars
+20/01/2023 13:53:52: 14.6 Livre britaniques sont équivalent à 14.60 Livre britaniques
+20/01/2023 13:53:59: 1000 Euros sont équivalent à 141030.00 Yens
+20/01/2023 14:13:01: 150 Euros sont équivalent à 162.00 Dollars
